<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@drawable/blackbackground"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/score1">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="30sp"
            android:textColor="@color/colorWhite"
            android:gravity="center"
            android:text="@string/table_score"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/scoreend"
        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:text="@string/back"
            android:background="@drawable/shapemenu"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/score1"
        android:orientation="horizontal"
        android:id="@+id/score2">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:textColor="@color/colorWhite"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/players"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            android:layout_height="wrap_content"
            android:text="@string/win"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/loser"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/score"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"/>
            </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@id/score2"
    android:layout_above="@id/scoreend">
    <ListView
        android:id="@+id/list_score"
     android:layout_width="match_parent"
      android:layout_height="match_parent"
        android:divider="@color/colorWhite"
        android:dividerHeight="2dp">
</ListView>
</LinearLayout>

</RelativeLayout>
