<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blackbackground">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:id="@+id/playerpc1"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registration"
            android:textColor="@color/colorWhite"
            android:textSize="30sp"
            android:gravity="center"
            />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/playerpc2"
        android:layout_height="wrap_content"
        android:layout_below="@+id/playerpc1"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/playerone"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/editname1"
            android:layout_width="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_height="wrap_content"
            android:background="@drawable/shapewhite"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/playerpc3"
        android:layout_below="@id/playerpc2"
        android:layout_margin="20dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leveal"
            android:textColor="@color/colorWhite"
            android:layout_marginBottom="20dp"
            android:textSize="20sp"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radiogroup"
            android:orientation="vertical">
            <RadioButton
                android:id="@+id/radio1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:checked="true"
                android:text="@string/easy"
                android:textSize="20sp"
                android:buttonTint="@color/colorWhite"/>

            <RadioButton
                android:id="@+id/radio2"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:buttonTint="@color/colorWhite"
                android:text="@string/medium"
                android:textColor="@color/colorWhite"
                android:textSize="20sp" />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:id="@+id/radio3"
                android:buttonTint="@color/colorWhite"
                android:text="@string/hard"
                android:textSize="20sp"/>
        </RadioGroup>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/playerpc3"
        android:gravity="end">
        <Button
            android:layout_width="wrap_content"
            android:id="@+id/btnok3"
            android:layout_height="wrap_content"
            android:background="@drawable/shapemenu"
            android:text="Ok"
            android:textColor="@color/colorWhite"
            android:layout_marginEnd="20dp"
            />
    </LinearLayout>
</RelativeLayout>