<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
        android:background="#313131" android:orientation="vertical" android:layout_height="match_parent" android:layout_width="match_parent" xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout android:orientation="vertical"
    android:layout_height="wrap_content"
    android:weightSum="2"
    android:layout_width="match_parent"
    android:id="@+id/reversiline1"
    android:gravity="center" >
    <ImageView android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="2"
        android:padding="40dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/title"/>
</LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:weightSum="4"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/reversiline1"
        >
    <TableLayout
        android:layout_marginTop="20dp"
        android:layout_weight="4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:gravity="center"
        android:orientation="vertical"
        >

        <Button
            android:id="@+id/uservsuser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:text="@string/onevsone"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:background="@drawable/shapemenu"/>

        <Button
            android:id="@+id/uservspc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/onevspc"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textColor="@color/colorWhite"
            android:background="@drawable/shapemenu"
            android:gravity="center" />

        <Button
            android:id="@+id/rules"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/shapemenu"
            android:layout_marginTop="10dp"
            android:textAllCaps="false"
            android:text="@string/gameRule"
            android:textSize="20sp"
            android:textColor="@color/colorWhite"
            android:gravity="center" />

        <Button
            android:id="@+id/tabletropie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/shapemenu"
            android:gravity="center"
            android:text="@string/statistics"
            android:textColor="@color/colorWhite"
            android:textAllCaps="false"
            android:textSize="20sp"/>
</TableLayout>
    </LinearLayout>
</RelativeLayout>