<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blackbackground">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:id="@+id/player1"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registration"
            android:textColor="@color/colorWhite"
            android:textSize="30sp"
            android:gravity="center"
            />
    </RelativeLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:id="@+id/player2"
    android:layout_height="wrap_content"
    android:layout_below="@+id/player1"
    android:layout_marginTop="20dp"
    android:layout_marginStart="20dp">

 <TextView
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="@string/playerone"
     android:textColor="@color/colorWhite"
     android:textSize="20sp"/>
    <EditText
        android:id="@+id/editname1"
        android:layout_width="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_height="wrap_content"
        android:background="@drawable/shapewhite"/>
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/player3"
        android:layout_height="wrap_content"
        android:layout_below="@+id/player2"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/playertwo"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/editname2"
            android:layout_width="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_height="wrap_content"
            android:background="@drawable/shapewhite"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/player4"
        android:gravity="end"
        android:layout_below="@id/player3">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnok"
            android:background="@drawable/shapemenu"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorWhite"
            android:text="OK"
            android:layout_marginEnd="20dp"
            />
    </LinearLayout>
</RelativeLayout>